--- a/src/css/main.css
+++ b/src/css/main.css
@@ -482,14 +482,12 @@ Play State - Tower Select/Build
 
 @-webkit-keyframes build-d {
 	to {
-		box-shadow: inset 0 0 0 0 transparent;
 		opacity: 0;
 	}
 }
 
 @keyframes build-d {
 	to {
-		box-shadow: inset 0 0 0 0 transparent;
 		opacity: 0;
 	}
 }
@@ -499,6 +497,18 @@ Play State - Tower Select/Build
 .build-w { background: hsl(200, 90%, 60%); }
 .build-a { background: hsl(60, 90%, 60%); }
 .build-f { background: hsl(0, 90%, 60%); }
+
+.no-b-e .build-e,
+.no-b-w .build-w,
+.no-b-a .build-a,
+.no-b-f .build-f,
+.no-b-e.hover-e .build-info > *,
+.no-b-e.hover-w .build-info > *,
+.no-b-e.hover-a .build-info > *,
+.no-b-e.hover-f .build-info > * {
+	cursor: not-allowed;
+	opacity: 0.2;
+}
 
 .build-e:hover,
 .build-w:hover,
@@ -847,10 +857,10 @@ Enemies
 	top: -20px;
 }
 
-.enemy.boss.type-e:before { border-color: hsl(120, 80%, 60%); }
-.enemy.boss.type-w:before { border-color: hsl(200, 80%, 60%); }
-.enemy.boss.type-a:before { border-color: hsl(60, 80%, 60%); }
-.enemy.boss.type-f:before { border-color: hsl(0, 80%, 60%); }
+.enemy.type-e:before { border-color: hsl(120, 80%, 60%); }
+.enemy.type-w:before { border-color: hsl(200, 80%, 60%); }
+.enemy.type-a:before { border-color: hsl(60, 80%, 60%); }
+.enemy.type-f:before { border-color: hsl(0, 80%, 60%); }
 
 .enemy:after {
 	background: hsla(0, 0%, 100%, 0.5);
@@ -861,8 +871,8 @@ Enemies
 	opacity: 0;
 	position: absolute;
 	top: -4px;
-	-webkit-transition: all 300ms ease-out;
-	transition: all 300ms ease-out;
+	-webkit-transition: opacity 300ms ease-out;
+	transition: opacity 300ms ease-out;
 }
 
 .enemy.boss:after {
