--- a/src/css/main.css
+++ b/src/css/main.css
@@ -120,6 +120,41 @@ Play State - Buttons - General
 	padding-top: 1px;
 }
 
+.game-title {
+	background: #090909;
+	box-shadow: inset 0 0 0 1px hsla(0, 0%, 100%, 0.05);
+	color: hsla(0, 0%, 100%, 0.7);
+	display: block;
+	float: left;
+	font-size: 15px;
+	font-weight: bold;
+	height: 39px;
+	line-height: 37px;
+	margin-right: 1px;
+	padding: 0 20px;
+	position: relative;
+	text-align: left;
+	text-shadow: 0 1px 1px #000;
+	width: 400px;
+}
+
+.game-title span {
+	color: hsla(0, 0%, 100%, 0.3);
+	font-size: 11px;
+	font-weight: normal;
+	margin-left: 10px;
+}
+
+.game-title:before {
+	background: linear-gradient(to bottom, transparent 0%, hsla(0, 0%, 100%, 0.075) 100%);
+	content: '';
+	height: 50%;
+	left: 0;
+	position: absolute;
+	top: 0;
+	width: 100%;
+}
+
 .b {
 	background: #333;
 	box-shadow: inset 0 0 0 1px hsla(0, 0%, 100%, 0.15);
@@ -160,6 +195,7 @@ Play State - Buttons - General
 
 .s1 { width: 39px; }
 .s2 { width: 79px; }
+.s2:last-child { margin-right: 0; }
 .s3 { width: 119px; }
 /*.s3:last-child { width: 120px; margin-right: 0; }*/
 .s4 { width: 159px; }
@@ -404,14 +440,11 @@ some tower menu thrown in for efficiency
 	background: hsla(0, 0%, 100%, 0.15);
 	border: 2px dashed #fff;
 	cursor: default;
-	animation: build-d 500ms ease-in-out infinite alternate;
+	-webkit-animation: pulse 500ms ease-in-out infinite alternate;
+	animation: pulse 500ms ease-in-out infinite alternate;
 }
 
-@keyframes build-d {
-	to {
-		opacity: 0;
-	}
-}
+
 
 .build-d { background: #fff; }
 .build-e { background: hsl(120, 90%, 60%); }
@@ -599,13 +632,8 @@ Play State - Tower Upgrade/Reclaim Menu
 	background: hsla(0, 0%, 100%, 0.15);
 	border: 2px solid #fff;
 	cursor: default;
-	animation: tower-highlight 500ms ease-in-out infinite alternate;
-}
-
-@keyframes tower-highlight {
-	to {
-		opacity: 0;
-	}
+	-webkit-animation: pulse 500ms ease-in-out infinite alternate;
+	animation: pulse 500ms ease-in-out infinite alternate;
 }
 
 .t-menu-e .tower-button.highlight { border-color: hsl(120, 90%, 60%); }
@@ -614,7 +642,6 @@ Play State - Tower Upgrade/Reclaim Menu
 .t-menu-f .tower-button.highlight { border-color: hsl(0, 90%, 60%); }
 
 .tower-button.upgrade {
-	background: pink;
 }
 
 .t-menu-e .tower-button.upgrade { background: hsl(120, 90%, 60%); }
@@ -759,9 +786,13 @@ Towers
 
 .t-wrap {
 	height: 40px;
-	transition: background 150ms;
+	transition: background 300ms;
 	width: 40px;
 	z-index: 100;
+}
+
+.t-wrap.targeting {
+	background: hsla(0, 0%, 100%, 0.2);
 }
 
 .t-wrap:hover {
@@ -902,6 +933,7 @@ Enemies
 	border-style: solid;
 	border-width: 4px;
 	left: 0;
+	pointer-events: none;
 	position: absolute;
 	top: 0;
 	transition:
@@ -912,20 +944,31 @@ Enemies
 }
 
 .enemy.slow {
-	box-shadow: 0 0 0 8px hsla(200, 100%, 50%, 0.5);
-	/*opacity: 0.5;*/
+	box-shadow: 0 0 0 8px hsla(200, 100%, 30%, 0.75);
+	opacity: 0.5;
 }
 
 .hp {
-	/*background: hsla(0, 0%, 200%, 0.5);
-	height: 2px;
-	left: 50%;
-	margin-left: -7px;
+	border: 1px solid hsla(0, 0%, 100%, 0.5);
+	border-top: none;
+	border-right: none;
+	height: 300%;
+	left: -8px;
 	position: absolute;
-	top: -10px;
-	transform: rotate( -45deg );
-	width: 14px;*/
+	bottom: -8px;
+	width: 300%;
+	z-index: 5
 }
+
+.enemy.boss .hp {
+	left: -10px;
+	bottom: -10px;
+}
+
+.enemy.type-e .hp {	border-color: hsl(120, 80%, 60%); }
+.enemy.type-w .hp {	border-color: hsl(200, 80%, 60%); }
+.enemy.type-a .hp {	border-color: hsl(60, 80%, 60%); }
+.enemy.type-f .hp {	border-color: hsl(0, 80%, 60%); }
 
 .hl {
 	border: 1px solid #fff;
@@ -973,15 +1016,15 @@ Enemies
 
 .enemy.boss:before {
 	border: 2px solid transparent;
-	border-right: none;
-	border-top: none;
+	border-left: none;
+	border-bottom: none;
 	border-radius: 100%;
-	bottom: -20px;
+	bottom: -18px;
 	content: '';
-	left: -20px;
-	right: -20px;
+	left: -18px;
+	right: -18px;
 	position: absolute;
-	top: -20px;
+	top: -18px;
 }
 
 .enemy.type-e:before { border-color: hsl(120, 80%, 60%); }
@@ -998,7 +1041,7 @@ Enemies
 	opacity: 0;
 	position: absolute;
 	top: -4px;
-	transition: opacity 400ms ease-out;
+	transition: opacity 300ms ease-out;
 }
 
 .enemy.boss:after {
@@ -1014,19 +1057,19 @@ Enemies
 }
 
 .enemy.type-e:after {
-	box-shadow: 0 0 0 4px hsl(120, 100%, 70%);
+	box-shadow: 0 0 0 4px hsl(120, 100%, 80%);
 }
 
 .enemy.type-w:after {
-	box-shadow: 0 0 0 4px hsl(200, 100%, 70%);
+	box-shadow: 0 0 0 4px hsl(200, 100%, 80%);
 }
 
 .enemy.type-a:after {
-	box-shadow: 0 0 0 4px hsl(60, 100%, 70%);
+	box-shadow: 0 0 0 4px hsl(60, 100%, 80%);
 }
 
 .enemy.type-f:after {
-	box-shadow: 0 0 0 4px hsl(0, 100%, 70%);
+	box-shadow: 0 0 0 4px hsl(0, 100%, 80%);
 }
 
 /*==============================================================================
@@ -1061,4 +1104,22 @@ Bullets
 .bullet.type-f {
 	background: hsl(0, 100%, 80%);
 	/*box-shadow: 0 0 10px hsl(0, 100%, 80%);*/
+}
+
+/*==============================================================================
+
+Keyframes
+
+==============================================================================*/
+
+@-webkit-keyframes pulse {
+	to {
+		opacity: 0;
+	}
+}
+
+@keyframes pulse {
+	to {
+		opacity: 0;
+	}
 }
