--- a/src/css/main.css
+++ b/src/css/main.css
@@ -19,7 +19,7 @@ body {
 }
 
 body {
-	background: #181818;
+	background: #111;
 	/*background: radial-gradient(ellipse at center,  #282828 0%,#060606 100%);*/
 	font-family: sans-serif;
 	overflow: hidden;
@@ -37,10 +37,11 @@ Game
 
 .g {
 	/*box-shadow: 0 0 0 20px rgba(0, 0, 0, 0.5);*/
-	box-shadow: 0 0 0 20px #000;
+	box-shadow: 0 0 0 20px #000, 0 0 0 21px #222;
 	left: 50%;
 	opacity: 0;
 	overflow: hidden;
+	pointer-events: none;
 	position: absolute;
 	transform: translate(-50%, -50%);
 	transition: opacity 500ms;
@@ -49,6 +50,7 @@ Game
 
 .g.loaded {
 	opacity: 1;
+	pointer-events: auto;
 }
 
 .s {
@@ -66,7 +68,8 @@ Play State - Tiles - Base
 ==============================================================================*/
 
 .tile {
-	background: hsla(0, 0%, 100%, 0.05);
+	/*background: hsla(0, 0%, 100%, 0.05);*/
+	background: #222;
 	left: 0;
 	position: absolute;
 	top: 0;
@@ -75,7 +78,7 @@ Play State - Tiles - Base
 
 .tile:hover {
 	background: #666;
-	background: hsla(0, 0%, 100%, 0.2);
+	/*background: hsla(0, 0%, 100%, 0.2);*/
 	transition-duration: 0ms;
 }
 
@@ -87,11 +90,12 @@ Play State - Tiles - Path
 
 .tile.path {
 	background: #111;
-	box-shadow: 0 -6px 0 #000;
+	/*background: hsla(0, 0%, 0%, 0.5);*/
+	/*box-shadow: 0 -6px 0 #000;*/
 }
 
 .tile.path:hover {
-	background: #311;
+	/*background: #311;*/
 	cursor: not-allowed;
 }
 
